--- a/Html-forms/index.css
+++ b/Html-forms/index.css
@@ -2,7 +2,7 @@ body{
     background-color: #0000009e;
 }
 
-h2.ht_title {
+#title {
     text-align: center;
     font-size: 3rem;
     background-color: #000;
@@ -12,6 +12,11 @@ h2.ht_title {
 .form-check{
     display: inline-block;
     margin:0  1.25rem;
+}
+p#description {
+    font-size: 1.2em;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 .container.mt-5 {
     background-color: #fff;
