--- a/Fetch_Api_task/index.css
+++ b/Fetch_Api_task/index.css
@@ -4,12 +4,13 @@ body {
 img.card-img-top {
     width: 100%;
     object-fit: cover;
-    height: 160px;
-    margin-bottom:1em;
+    height: 150px;
+    margin-bottom:1.4em;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
 }
 h1#title {
     color: #fff;
-    margin: 1em 0;
+    margin: 0.3em 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: #000;
     padding: 0.2em 0;
@@ -23,6 +24,40 @@ h1#title {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+.shadow-drop-2-center {
+	-webkit-animation: shadow-drop-2-center 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+	        animation: shadow-drop-2-center 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite alternate-reverse both;
+}
+ @-webkit-keyframes shadow-drop-2-center {
+    0% {
+      -webkit-transform: translateZ(0);
+              transform: translateZ(0);
+      -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+              box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+      -webkit-transform: translateZ(600px);
+              transform: translateZ(600px);
+      -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+              box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
+  }
+  @keyframes shadow-drop-2-center {
+    0% {
+      -webkit-transform: translateZ(0);
+              transform: translateZ(0);
+      -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+              box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+      -webkit-transform: translateZ(600px);
+              transform: translateZ(600px);
+      -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+              box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
+  }
+  
+  
 p.card-text {
     color: #000;
     border-bottom: 1px solid #fff;
