--- a/My-Reactapp/my-project/src/index.css
+++ b/My-Reactapp/my-project/src/index.css
@@ -27,8 +27,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  align-items: center;
+  justify-content: center;
   place-items: center;
-  min-width: 320px;
+  background-color: #0000008f;
+  /* min-width: 320px; */
   min-height: 100vh;
 }
 
@@ -38,10 +41,11 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border-radius: 50px;
+  /* border: 1px solid ; */
   padding: 0.6em 1.2em;
   font-size: 1em;
+  margin:0.4em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -55,6 +59,28 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+h1{
+  color:#fff;
+  margin:0;
+  font-weight: bold;
+  margin-bottom: 0.7em;
+}
+.col-sm-4{
+  border:unset;
+  background-color: transparent;
+}
+.card-container{
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color:#fff;
+  min-height:300px;
+  border-radius:5px;
+}
+.App {
+    width: 1200px;
+    padding: 1em;;
+    text-align: center;
+    border-radius: 5px;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -65,6 +91,8 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color:blue;
+    color:#fff;
+    border:unset;
   }
 }
